<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="bmi_text">bmi</string>
    <string name="weight_label">Weight</string>
    <string name="weight_hint">70</string>
    <string name="kg_label">Kg</string>
    <string name="height_label">Height</string>
    <string name="height_hint">180</string>
    <string name="cm_label">cm</string>
    <string name="button_text">CALCULATE</string>
    <string name="Underweight">Underweight</string>
    <string name="Healthy">Healthy</string>
    <string name="Overweight">Overweight</string>
    <string name="Obese">Obese</string>
    <string name="Range">Normal range is 18.5 - 24.9</string>
</resources>