<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/layout_backround">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/bmi_text"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_backround"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_label"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/add_weight_edit_text"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight_hint"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="60sp"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg_label"
                    android:textColor="@color/white"
                    android:textSize="34sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_backround"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_label"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/add_height_edit_text"

                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/height_hint"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="60sp"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cm_label"
                    android:textColor="@color/white"
                    android:textSize="34sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculate_bmi_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_text"
        android:textSize="16sp"
        android:background="@color/btn_backround"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/card_backround"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:padding="8dp">
           <TextView
               android:id="@+id/display_bmi_text_view"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:gravity="center"
               android:textSize="64sp"/>

           <TextView
               android:id="@+id/weight_class_text_view"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:textSize="32sp"/>

           <TextView
               android:id="@+id/ibm_range_text_view"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/text_hint"
               android:gravity="center"
               android:textSize="16sp"
               />
       </LinearLayout>


    </androidx.cardview.widget.CardView>




</LinearLayout>